Added assigning user to unmapped billing

--- a/src/main/resources/templates/listbillings.html
+++ b/src/main/resources/templates/listbillings.html
@@ -5,11 +5,11 @@
 <table border="1">
     <thead>
     <tr>
-        <td>username</td>
-        <td>account</td>
-        <td>qty</td>
-        <td>description</td>
-        <td>transactiontime</td>
+        <td>Użytkownik</td>
+        <td>Konto</td>
+        <td>Ilość</td>
+        <td>Opis</td>
+        <td>Data tranzakcji</td>
     </tr>
     </thead>
     <tbody>
