--- a/src/main/resources/templates/expenses.html
+++ b/src/main/resources/templates/expenses.html
@@ -1,40 +1,52 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>Załaduj billingi</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen" th:href="@{/css/bootstrap.min.css}"/>
+    <link href="/css/core.css" rel="stylesheet" media="screen" th:href="@{/css/core.css}" />
+    <script src="/js/jquery.min.js" th:src="@{/js/jquery.min.js}"></script>
+    <script src="/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
+</head>
 <body>
+<div th:replace="fragments/header :: header">&nbsp;</div>
+<div class="container">
+    <div th:if="${message}">
+        <h2 th:text="${message}"/>
+    </div>
+    <form action="#" th:action="@{/expenses}"
+          th:object="${newExpense}" method="post">
+        Description:
+        <input type="text" th:field="*{description}" />
+        <br/>
+        Quantity:
+        <input type="text" th:field="*{qty}" />
+        <br/>
+        Due date:
+        <input type="date" th:field="*{dueDateString}" />
+        <br/>
+        <input type="submit" value="Add" />
+    </form>
 
-
-<form action="#" th:action="@{/expenses}"
-      th:object="${newExpense}" method="post">
-    Description:
-    <input type="text" th:field="*{description}" />
     <br/>
-    Quantity:
-    <input type="text" th:field="*{qty}" />
-    <br/>
-    Due date:
-    <input type="date" th:field="*{dueDateString}" />
-    <br/>
-    <input type="submit" value="Add" />
-</form>
 
-<br/>
-
-<table border="1">
-    <thead>
-    <tr>
-        <td>description</td>
-        <td>qty</td>
-        <td>dueDate</td>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="expense : ${expenses}">
-        <td th:text="${expense.description}"></td>
-        <td th:text="${expense.qty}"></td>
-        <td th:text="${expense.dueDate}"></td>
-    </tr>
-    </tbody>
-</table>
-
+    <table border="1">
+        <thead>
+        <tr>
+            <td>description</td>
+            <td>qty</td>
+            <td>dueDate</td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="expense : ${expenses}">
+            <td th:text="${expense.description}"></td>
+            <td th:text="${expense.qty}"></td>
+            <td th:text="${expense.dueDate}"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
+
