--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Załaduj billingi</title>
+    <title>Skarbnik</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen" th:href="@{/css/bootstrap.min.css}"/>
-    <link href="/css/core.css" rel="stylesheet" media="screen" th:href="@{/css/core.css}"/>
+    <link href="/css/core.css" rel="stylesheet" media="screen" th:href="@{/css/core.css}" />
     <script src="/js/jquery.min.js" th:src="@{/js/jquery.min.js}"></script>
     <script src="/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 </head>
 <body>
 <div th:replace="fragments/header :: header">&nbsp;</div>
 <div class="container">
+    <!-- /* Handle the flash message */-->
+    <p>
+        Witaj w aplikacji skarbnik :)
+    </p>
     <div th:if="${message}">
         <h2 th:text="${message}"/>
     </div>
-    <form action="#" th:action="@{/upload}" enctype="multipart/form-data" method="post">
-        <input type="file" name="file"/><br/><br/>
-        <input type="submit" value="Załaduj"/>
-    </form>
 </div>
 </body>
 </html>
