--- a/src/main/resources/templates/listbillings.html
+++ b/src/main/resources/templates/listbillings.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>Skarbnik</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen" th:href="@{/css/bootstrap.min.css}"/>
+    <link href="/css/core.css" rel="stylesheet" media="screen" th:href="@{/css/core.css}" />
+    <script src="/js/jquery.min.js" th:src="@{/js/jquery.min.js}"></script>
+    <script src="/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
+</head>
 <body>
-
-<table border="1">
-    <thead>
-    <tr>
-        <td>Użytkownik</td>
-        <td>Konto</td>
-        <td>Ilość</td>
-        <td>Opis</td>
-        <td>Data tranzakcji</td>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="billing : ${billings}">
-        <td th:text="${billing.username}"></td>
-        <td th:text="${billing.account}"></td>
-        <td th:text="${billing.qty}"></td>
-        <td th:text="${billing.description}"></td>
-        <td th:text="${billing.transactiontime}"></td>
-    </tr>
-    </tbody>
-</table>
-
+<div th:replace="fragments/header :: header">&nbsp;</div>
+<div class="container">
+    <table border="1">
+        <thead>
+        <tr>
+            <td>Użytkownik</td>
+            <td>Konto</td>
+            <td>Ilość</td>
+            <td>Tytuł</td>
+            <td>Przelewający</td>
+            <td>Opis</td>
+            <td>Data tranzakcji</td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="billing : ${billings}">
+            <td th:text="${billing.username}"></td>
+            <td th:text="${billing.account}"></td>
+            <td th:text="${billing.qty}"></td>
+            <td th:text="${billing.title}"></td>
+            <td th:text="${billing.issuer}"></td>
+            <td th:text="${billing.description}"></td>
+            <td th:text="${billing.transactionTime}"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
