--- a/src/main/resources/templates/usersExpenses.html
+++ b/src/main/resources/templates/usersExpenses.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <title>Załaduj billingi</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen" th:href="@{/css/bootstrap.min.css}"/>
+    <link href="/css/core.css" rel="stylesheet" media="screen" th:href="@{/css/core.css}" />
+    <script src="/js/jquery.min.js" th:src="@{/js/jquery.min.js}"></script>
+    <script src="/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
+</head>
 <body>
-
-
-
-<table border="1">
-    <thead>
-    <tr>
-        <th>Użytkownik</th>
-        <th:block th:each="expense : ${expenses}">
-            <th th:text="${expense.description}"></th>
-        </th:block>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="user: ${usersExpenses.keySet()}">
-        <td th:text="${user}"></td>
-        <th:block th:each="usersExpense : ${usersExpenses.get(user)}">
-            <td th:text="${usersExpense.payed}"></td>
-        </th:block>
-    </tr>
-    </tbody>
-</table>
-
+<div th:replace="fragments/header :: header">&nbsp;</div>
+<div class="container">
+    <div th:if="${message}">
+        <h2 th:text="${message}"/>
+    </div>
+    <table border="1">
+        <thead>
+        <tr>
+            <th>Użytkownik</th>
+            <th:block th:each="expense : ${expenses}">
+                <th th:text="${expense.description}"></th>
+            </th:block>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="user: ${usersExpenses.keySet()}">
+            <td th:text="${user}"></td>
+            <th:block th:each="usersExpense : ${usersExpenses.get(user)}">
+                <td th:text="${usersExpense.payed}"></td>
+            </th:block>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
