Even more cleanup

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -23,13 +23,13 @@
                     <a href="#" th:href="@{/upload}">Załaduj billingi</a>
                 </li>
                 <li>
-                    <a href="#" th:href="@{/listbillings}">Raport billingów</a>
+                    <a href="#" th:href="@{/paymentsReport}">Raport billingów</a>
                 </li>
                 <li>
                     <a href="#" th:href="@{/expenses}">Wydatki</a>
                 </li>
                 <li>
-                    <a href="#" th:href="@{/usersExpenses}">Raport Wydatków</a>
+                    <a href="#" th:href="@{/payedExpensesReport}">Raport Wydatków</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
