--- a/src/main/resources/templates/mapUsersToPayments.html
+++ b/src/main/resources/templates/mapUsersToPayments.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Załaduj billingi</title>
+    <title>Skarbnik</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen" th:href="@{/css/bootstrap.min.css}"/>
     <link href="/css/core.css" rel="stylesheet" media="screen" th:href="@{/css/core.css}" />
@@ -28,9 +28,9 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="billing: ${billings}">
+        <tr th:each="billing: ${payments}">
             <td>
-                <form action="#" th:action="@{/mapUsersExpenses}"
+                <form action="#" th:action="@{/mapUsersToPayments}"
                       method="post">
                     <select id="user" name="user">
                         <option th:each="user : ${users}" th:value="${user}" th:text="${user}"></option>
