added gdpr agreement

--- a/src/main/resources/templates/resetPassword.html
+++ b/src/main/resources/templates/resetPassword.html
@@ -4,34 +4,143 @@
     <title>Ustaw hasło</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen" th:href="@{/css/bootstrap.min.css}"/>
-    <link href="/css/core.css" rel="stylesheet" media="screen" th:href="@{/css/core.css}" />
+    <link href="/css/core.css" rel="stylesheet" media="screen" th:href="@{/css/core.css}"/>
     <script src="/js/jquery.min.js" th:src="@{/js/jquery.min.js}"></script>
     <script src="/js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 </head>
 <body>
-<div class="container">
-    <div th:if="${message}">
-        <h2 th:text="${message}"/>
-    </div>
-    <form action="#" th:action="@{/resetPassword}"
-          th:object="${passwordReset}" method="post">
-        Hasło:
-        <input type="password" th:field="*{password}" />
-        <br/>
-        Powtórz hasło:
-        <input type="password" th:field="*{passwordRepeat}" />
-        <br/>
-        Imię dziecka:
-        <input type="text" th:field="*{childName}" />
-        <br/>
-        Nazwisko dziecka:
-        <input type="text" th:field="*{childSurname}" />
-        <br/>
-        Email:
-        <input type="email" th:field="*{email}" />
-        <br/>
-        <input type="submit" value="Ustaw Hasło" />
-    </form>
-</div>
+<table>
+    <tr>
+        <td style="align: center">
+            <div th:if="${message}">
+                <h2 th:text="${message}"/>
+            </div>
+        </td>
+    </tr>
+    <tr>
+        <td style="text-align: -webkit-center;">
+            <table>
+                <form action="#" th:action="@{/resetPassword}"
+                      th:object="${passwordReset}" method="post">
+                    <tr>
+                        <td>Hasło:</td>
+                        <td><input type="password" th:field="*{password}"/></td>
+                    </tr>
+                    <tr>
+                        <td>Powtórz hasło:</td>
+                        <td><input type="password" th:field="*{passwordRepeat}"/></td>
+                    </tr>
+                    <tr>
+                        <td>Imię dziecka:</td>
+                        <td><input type="text" th:field="*{childName}"/></td>
+                    </tr>
+                    <tr>
+                        <td>Nazwisko dziecka:</td>
+                        <td><input type="text" th:field="*{childSurname}"/></td>
+                    </tr>
+                    <tr>
+                        <td>Email:</td>
+                        <td><input type="email" th:field="*{email}"/></td>
+                    </tr>
+                    <tr>
+                        <td>Zgadzma się na politykę prywatności (poniżej)</td>
+                        <td><input type="checkbox" th:field="*{gdpr}"/></td>
+                    </tr>
+                    <tr>
+                        <td colspan="2"><input type="submit" value="Ustaw Hasło"/></td>
+                    </tr>
+
+
+                </form>
+            </table>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <h1>Polityka Prywatności</h1>
+
+            W niniejszej „Polityce Prywatności” wyjaśniamy stosowane przez twórcę aplikacji “Skarbnik” praktyki w
+            zakresie gromadzenia, wykorzystywania i ujawniania określonych informacji, w tym danych osobowych
+            użytkownika.
+
+            Twoje dane osobowe będą przetwarzane w celu sporządzania i prezentowania raportów wpłat w aplikacji
+            “Skarbnik”. Podstawą prawną przetwarzania Twoich danych osobowych jest umowa - art. 6 ust. 1 lit. b)
+            Rozporządzenia Parlamentu Europejskiego i Rady (UE) 2016/679 z dnia 27 kwietnia 2016 r. w sprawie ochrony
+            osób fizycznych w związku z przetwarzaniem danych osobowych i w sprawie swobodnego przepływu takich danych
+            oraz uchylenia dyrektywy 95/46/WE (ogólne rozporządzenie o ochronie danych), zwanego dalej RODO.
+
+            <h3>Kontakt</h3>
+
+            W razie pytań dotyczących niniejszej Polityki Prywatności lub wykorzystywania przez nas danych osobowych
+            użytkowników, konta użytkownika, sposobu działania serwisu lub w celu uzyskania pomocy, prosimy korzystać z
+            maila sp28.nutki@gmail.com.
+
+            <h3>Gromadzenie danych</h3>
+
+            Gromadzimy i przechowujemy następujące dane na temat użytkowników:
+
+            <ul>email</ul>
+            <ul>imię dziecka</ul>
+            <ul>nazwisko dziecka</ul>
+            <ul>Wyciągi z konta skarbnika przedszkolnego zawierające numery kont, tytuły przelewów, kwoty przelewów oraz daty przelewów</ul>
+            Dane gromadzimy i przechowujemy na serwerach zlokalizowanych w kilku krajach.
+
+            <h3>Wykorzystanie danych</h3>
+
+            Informacje powyższe wykorzystujemy i przetwarzamy w celu korzystania z usług świadczonych przez aplikację
+            “Skarbnik”
+
+
+            <h3>Ujawnianie danych</h3>
+
+            Co do zasady nie sprzedajemy, nie udostępniamy ani nie przekazujemy zbieranych informacji innym podmiotom,
+            chyba że obowiązek ich udostępnienia wynika z powszechnie obowiązujących przepisów prawa
+
+
+            <h3>Okres przetwarzania danych</h3>
+
+            Twoje dane osobowe przetwarzane będą przez okres korzystania z usług oraz przez czas trwania umowy i po jej
+            zakończeniu przez okres niezbędny do obrony praw.
+
+            <h3>Prawa użytkownika i informacje dotyczące użytkownika</h3>
+
+            <h5>Przysługuje Ci prawo do:</h5>
+
+            dostępu do swoich danych osobowych i otrzymania kopii danych osobowych podlegających przetwarzaniu;
+            sprostowania swoich nieprawidłowych danych;
+            żądania usunięcia danych (prawo do bycia zapomnianym) w przypadku wystąpienia okoliczności przewidzianych w
+            art. 17 RODO;
+            żądania ograniczenia przetwarzania danych w przypadkach wskazanych w art. 18 RODO;
+            wniesienia sprzeciwu wobec przetwarzania danych w przypadkach wskazanych w art. 21 RODO;
+            przenoszenia dostarczonych danych, przetwarzanych w sposób zautomatyzowany.
+            Jeżeli uważasz, że Twoje dane osobowe są przetwarzane z naruszeniem przepisów RODO, możesz wnieść skargę do
+            organu nadzorczego.
+
+            <h3>Zabezpieczenia</h3>
+
+            Stosujemy zabezpieczenia i procesy zarządcze i technologiczne, zapewniające poziom bezpieczeństwa odpowiedni
+            do zagrożeń związanych z przetwarzaniem danych osobowych, mające na celu ochronę danych użytkownika przed
+            utratą, kradzieżą, nieuprawnionym dostępem, wykorzystaniem lub modyfikacją.
+
+            <h3>Zmiany w Polityce Prywatności</h3>
+
+            Administrator aplikacji “Skarbnik” gwarantuje sobie możliwość aktualizacji niniejszej polityki prywatności w
+            dowolnym momencie. W takim wypadku, w treści Aplikacji bądź na stronie serwisu zostanie udostępniona
+            stosowna informacja.
+
+            <h3>Akceptacja tych warunków</h3>
+
+            Korzystając z naszych usług, akceptujecie Państwo niniejszą politykę prywatności. W przeciwnym razie prosimy
+            o niekorzystanie z usług “Skarbnika”. Korzystanie z naszych usług będzie uznane za akceptację ww. polityki.
+
+            <br/>
+            <br/>
+            Ostatnia wersja: 21.11.2018 r
+
+
+        </td>
+    </tr>
+</table>
+
 </body>
 </html>
