--- a/src/main/resources/templates/payedExpensesReport.html
+++ b/src/main/resources/templates/payedExpensesReport.html
@@ -35,6 +35,7 @@
                         </span>
                         <span th:case="${true}">
                             <img th:src="@{/icons/true.png}" style="width:16px;height:16px"/>
+                            <span th:text="'Saldo: ' + ${usersExpense.leftToPay} + ' PLN'"></span>
                         </span>
                         <span th:case="*">Should never happen, but who knows...</span>
                     </div>
