--- a/src/main/resources/templates/resetPassword.html
+++ b/src/main/resources/templates/resetPassword.html
@@ -43,7 +43,7 @@
                         <td><input type="email" th:field="*{email}"/></td>
                     </tr>
                     <tr>
-                        <td>Zgadzma się na politykę prywatności (poniżej)</td>
+                        <td>Zgadzam się na politykę prywatności (poniżej)</td>
                         <td><input type="checkbox" th:field="*{gdpr}"/></td>
                     </tr>
                     <tr>
